--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,6 +15,7 @@
   --gray-mid: #4c626b;
   --gray-dark: #001920;
   --white: #ffffff;
+  --black: #000000;
 
   --primary-glow: conic-gradient(
     from 180deg at 50% 50%,
@@ -90,7 +91,7 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
-  font-family: "Open Sans", Helvetica, Arial, Lucida, sans-serif;
+  font-family: "Open-Sans", Helvetica, Arial, Lucida, sans-serif;
 }
 
 body {
