feat: add banner hero skeleton

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -95,8 +95,8 @@ body {
 }
 
 body {
-  color: var(--dark-gray);
-  background: var(--white);
+  color: var(--white);
+  background: #1B1B1B;
 }
 
 a {
